k8s/service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hms-backend
  labels:
    app: hms-backend
spec:
  selector:
    app: hms-backend
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  type: ClusterIP
